<resources>
    <string name="app_name">android-pagbank-capivaras</string>
    <string name="save_account_with_biometry">Salvar com biometria</string>
    <string name="login_user_password">Senha</string>
    <string name="login_user_data">CPF, CNPJ ou E-mail</string>
    <string name="pix_email">Insira o email do destinatário</string>
    <string name="login_enter">ENTRAR</string>
    <string name="pay_pix_email">Continuar</string>
    <string name="login_new_account">CRIAR CONTA</string>
    <string name="login_forgot_my_password">ESQUECI MINHA SENHA</string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="content_description_search">Notificacoes</string>
    <string name="content_description_more">Conta</string>
    <string name="content_description_extract">Extrato</string>
    <string name="content_description_carts">Cartoes</string>
    <string name="content_description_lock">Lock</string>
    <string name="lock">Lock</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="start">Início</string>
    <string name="menu_home_statement">Extrato</string>
    <string name="sales">Vendas</string>
    <string name="menu_home_cards">Cartões</string>
    <string name="home_top_app_bar_lock">Travar</string>
    <string name="home_top_app_bar_notifications">Notificações</string>
    <string name="home_top_app_bar_account">Conta</string>
    <string name="home_fragment_balance">Saldo</string>
    <string name="currency">R$</string>
    <string name="home_fragment_balance_box_button">Ver detalhes do saldo</string>
    <string name="home_fragment_balance_box_sales_to_receive">Vendas a receber</string>
    <string name="almost_there">FALTA POUCO!</string>
    <string name="home_fragment_complete_the_phases">Complete as etapas e libere todos os serviços gratuitos</string>
    <string name="filter">Filtros</string>
    <string name="apply_filters">Aplicar Filtros</string>
    <string name="select_period">Selecione o periodo</string>
    <string name="last_3_days">Últimos 3 dias</string>
    <string name="last_7_days">Últimos 7 dias</string>
    <string name="last_30_days">Últimos 30 dias</string>
    <string name="last_60_days">Últimos 60 dias</string>
    <string name="last_120_days">Últimos 120 dias</string>
    <string name="transfers">Transferências</string>
    <string name="refills">Recargas</string>
    <string name="cards">Cartões</string>
    <string name="add_money">Adicionar dinheiro</string>
    <string name="pay_the_bills">Pagar Contas</string>
    <string name="pix_qrcode">Pix/QR Code</string>
    <string name="apply_my_money">Aplicar meu Dinheiro</string>
    <string name="learn_to_Invest">Aprenda a Investir</string>
    <string name="my_Investments">Meus Investimentos</string>
    <string name="insurance">Seguros</string>
    <string name="posts_Shell">Postos Shell</string>
    <string name="where_to_withdraw_money">Onde sacar dinheiro</string>
    <string name="offer_Radar">Radar de Ofertasl</string>
    <string name="shopping">Shopping</string>
    <string name="pay_with_QR_Code">Pagar com QR Code</string>
    <string name="refer_and_earn">Indique e Ganhe</string>
    <string name="main">Principais</string>
    <string name="products_and_investiments">Produtos e Investimentos</string>
    <string name="service">Serviços</string>
    <string name="free">GRÁTIS!</string>
    <string name="pay_with_pix_copy_and_paste">Pagar com Pix Copia e Cola</string>
    <string name="paste_qr_code_you_wish_to_pay">Cole o código do QR que você copiou para pagar</string>
    <string name="transfer_or_pay_qrcode">Transferir ou pagar QR Code</string>
    <string name="my_active_keys">Minhas chaves ativas</string>
    <string name="manage_caps_lock">GERENCIAR</string>
    <string name="share_your_keys_or_bank_data">Compartilhe suas chaves ou seus dados bancários para receber transeferências grátis.</string>
    <string name="random_key_caps_lock">CHAVE ALEATÓRIA</string>
    <string name="just_a_code_holder">6753c9f9-8ef1-4429-b5d4-b6a03...</string>
    <string name="sell_with_qrcode_pix_and_receive_instantly">Venda com QR code Pix por até 1,89% e receba na hora</string>
    <string name="continue_caps_lock">CONTINUAR</string>
    <string name="pix_with_p_from_pagbank">Pix é com P de PagBank: O banco completo e grátis</string>
    <string name="a_simple_way_to_send_and_receive_money">Uma forma simples de enviar e receber dinheiro. Veja como funciona:</string>
    <string name="transfer_by_free_and_ilimited_keys">Transferências por chaves grátis e ilimitadas</string>
    <string name="pay_and_receive_24_hours_a_day_7_days_a_week">Pague e Receba 24 horas por dia, 7 dias por semana</string>
    <string name="sell">Vender</string>
    <string name="transfer_by_pix">Fazer transferência por Pix</string>
    <string name="transfer_using_key_or_bank_data">Transfira utilizando a chave ou os dados bancários.</string>
    <string name="read_the_qrcode_to_realize_payment">Leia o QR Code para realizar o pagamento.</string>
    <string name="paste_the_qrcode_you_copied_to_pay">Cole o código do QR que você copiou para pagar.</string>
    <string name="sell_with_qrcode">Vender com QR Code</string>
    <string name="receive_at_the_moment_with_only_1.69_tax">Receba na hora com QR Code Pix com taxa de apenas 1,69%.</string>
    <string name="cancel">Cancelar</string>
    <string name="check_the_data_before_continue">Confira os dados antes de continuar</string>
    <string name="transfer_value">Valor da tranferência</string>
    <string name="two_money">R$ ****.**</string>
    <string name="tariff">Tarifa</string>
    <string name="free_normal">Grátis</string>
    <string name="total_value_of_the_operation">Valor total da operação</string>
    <string name="to">Para</string>
    <string name="email">Email:</string>
    <string name="Institution">Instituição:</string>
    <string name="description">Descrição:</string>
    <string name="when">Quando</string>
    <string name="confirm_transfer">Confirmar Trasferência</string>
    <string name="pix_description">Continuar</string>
    <string name="transfer_with_pix">Transferir com Pix</string>
    <string name="insert_description">Insira a descrição (opcional)</string>
    <string name="pix_value">Informe o valor da transferência</string>
    <string name="pix_balance">Saldo PagBank: </string>
    <string name="show_balance">Mostrar</string>
    <string name="pix_free_transfer">Cliente PagBank tem tranferências Pix gratuitas e ilimitadas</string>
    <string name="transfer_completed_succesfully">Transferência Pix realizada com sucesso!</string>
    <string name="date_and_hour_holder">16/11/2020 às 17:32:46</string>
    <string name="value_of_the_transfer">Valor da transferência</string>
    <string name="name_holder">holder de nome</string>
    <string name="account">Conta</string>
    <string name="notifications">Notificações</string>
    <string name="hide">Ocultar</string>
    <string name="an_error_has_ocurred_try_again_later">Ocorreu um erro, tente novamente mais tarde</string>
    <string name="cellphone">Celular</string>
    <string name="personal_id_or_company_id">CPF ou CNPJ</string>
    <string name="random_key">Chave aleatória</string>
    <string name="agency_and_account">Agência e conta</string>
    <string name="do_another_transfer">Fazer outra transferência</string>
    <string name="go_to_the_start">Ir para o início</string>
    <string name="not_yet_implemented">Ainda não implementado</string>
    <string name="select_a_day">Selecione um dia</string>
</resources>
