<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/lock"
        android:icon="@drawable/ic_baseline_lock_24"
        android:title="@string/lock"
        android:contentDescription="@string/content_description_lock"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_baseline_notifications_none_24"
        android:title="@string/notifications"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/account"
        android:title="@string/account"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:contentDescription="@string/content_description_more"
        app:showAsAction="ifRoom" />

</menu>
